--- a/Frontend/static/switcher/index.html
+++ b/Frontend/static/switcher/index.html
@@ -21,7 +21,7 @@
     </div>
 
     <!-- <div style="margin: 0px; text-decoration: line-through;"> -->
-    <div style="margin: 0px;">s
+    <div style="margin: 0px;">
         <h1 style="color: purple; text-align: center;">오스 바로가기 만드시고 -devserver redstar.moe 를 입력하고 들어오세요.</h1>
         <h1 style="color: purple; text-align: center;">Create an osu shortcut, enter -devserver redstar.moe, and come in.</h1>
     </div>
